Scroll on mobile is fixed

--- a/src/styles/blocks/device.scss
+++ b/src/styles/blocks/device.scss
@@ -13,7 +13,7 @@
     background-position: center;
     background-repeat: no-repeat;
     mix-blend-mode: darken;
-    width: 320px;
+    width: 310px;
     height: 245px;
     margin-bottom: 40px;
     transition: $transitionTime;
