--- a/src/styles/blocks/features.scss
+++ b/src/styles/blocks/features.scss
@@ -34,6 +34,10 @@
     padding: 30px 0 0 30px;
     background-color: $c-light-green;
 
+    &:last-child {
+      padding-left: 0;
+    }
+
     @include onTablet {
       padding: 60px 0 0 90px;
     }
@@ -47,14 +51,19 @@
   }
 
   &__sound-image {
-    width: 335px;
+    width: 310px;
     height: 175px;
     margin: 0 auto;
     mix-blend-mode: darken;
     transition: $transitionTime;
 
     &:hover {
-      transform: skew(15deg);
+      box-shadow: 1px 1px aqua,
+        2px 2px aqua,
+        3px 3px aqua,
+        4px 4px aqua,
+        5px 5px aqua,
+        6px 6px aqua;
     }
 
     @include onTablet {
