--- a/src/styles/blocks/presentation.scss
+++ b/src/styles/blocks/presentation.scss
@@ -12,6 +12,7 @@
     width: 296px;
     height: 195px;
     transition: 1s;
+    margin: 0 12px 110px;
 
     &:hover {
       filter: brightness(80%);
@@ -19,14 +20,17 @@
 
     @include onTablet {
       background-image: url(../images/presentation-tablet.png);
+      background-size: contain;
       width: 700px;
       height: 430px;
+      margin: 0 34px 140px;
     }
   
     @include onDesktop {
       background-image: url(../images/presentation-desktop.png);
       width: 846px;
       height: 520px;
+      margin: 0 123px 170px;
     }
   }
 }
