--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,6 +16,10 @@
 @import "./blocks/container.scss";
 @import "./blocks/footer.scss";
 
+* {
+  // box-sizing: border-box;
+}
+
 html {
   font-family: Inter, sans-serif;
   scroll-behavior: smooth;
